# Sabi_mouthing_speech

./: .gitattributes  .gitignore  .gitmodules  README.md  activate_venv.bat  open_cmd_with_venv.bat  project_roadmap.md  pyproject.toml  waitlist_emails.csv
configs/: audio_dictate.toml  cleanup.toml  fused_dictate.toml  fusion.toml  hotkey.toml  silent_dictate.toml  vsr_weights.toml
configs/manifests/: asr.toml  cleanup.toml  vsr.toml
configs/runtime/: full-cpu.json
desktop/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.electron.json  tsconfig.electron.tsbuildinfo  tsconfig.renderer.json  tsconfig.renderer.tsbuildinfo  vite.config.ts  vitest.config.ts
desktop/electron/: main.ts  ollama.ts  preload.cts  runtime.ts  settings.ts  shortcuts.ts  tray.ts  windows.ts
desktop/renderer/: index.html  tsconfig.json  vite-env.d.ts
desktop/scripts/: after-pack-mac.mjs  create-local-signing-cert.ps1  package-mac.mjs  package-win.mjs  validate-mac-package.mjs  validate-win-package.mjs
docs/: DEMO.md  FUSED_EVAL.md  INFRA_CHEAT_SHEET.md  INSTALL.md  MODELS.md  ONBOARDING.md  PERSONAL_VSR_FINETUNING.md  audio-dictate.md  cleanup-prompt.md  fused-eval-data.md  fusion.md  hotkey.md  paste-injection.md  silent-dictate.md
docs/adr/: ADR-001-desktop-packaging.md
docs/distribution_packaging/: ELECTRON_DISTRIBUTION_ARCHITECTURE.md  HOTKEY_OWNERSHIP.md  README.md  SIDECAR_BUILD.md  SIGNING_MACOS.md  SIGNING_WINDOWS.md  WINDOWS_INSTALLER.md  WINDOWS_SIDECAR_RUNTIME_FLOW.md
docs/supabase/: profiles-last-login.sql  user-onboarding-intake.sql
packaging/sidecar/: entry.py  sabi_sidecar.spec  sabi_sidecar_full_cpu.spec  (+1 more)
reports/: audio_dictate_19700102.jsonl  fused_dictate_19700102.jsonl  fused_dictate_19700103.jsonl  latency-log.md  silent_dictate_19700102.jsonl
scripts/: audio_dictate.py  build_sidecar.py  build_sidecar_full_cpu.py  build_sidecar_release.py  download_vsr_weights.py  hotkey_debug.py  lip_roi_debug.py  mic_monitor.py  paste_harness.py  probe_env.py  record_demo.ps1  silent_dictate.py  webcam_viewer.py
tests/: test_asr.py  test_asset_cache.py  test_audio_dictate.py  test_calibration_handlers.py  test_cleanup.py  test_cli.py  test_collect_fused_eval.py  test_eval_harness.py  test_fused_dataset.py  test_fused_dictate.py  test_fused_tuning.py  test_fusion.py  test_fusion_mode_ab.py  test_hotkey.py  test_inject_unicode.py  test_lip_roi.py  test_microphone.py  test_probe.py  test_runtime_paths.py  test_sidecar_cache.py  test_sidecar_dispatcher.py  test_sidecar_imports.py  test_sidecar_protocol.py  test_sidecar_smoke.py  test_silent_dictate.py  test_smoke.py  test_status_tui.py  test_vsr_wrapper.py  test_webcam_source.py
tickets/: README.md  TICKET-001-repo-scaffolding.md  TICKET-002-core-dependencies-env-probe.md  TICKET-003-webcam-capture.md  TICKET-004-lip-roi-detector.md  TICKET-005-chaplin-vsr-wrapper.md  TICKET-006-mic-capture-vad.md  TICKET-007-faster-whisper-asr.md  TICKET-008-ollama-cleanup.md  TICKET-009-clipboard-paste-injection.md  TICKET-010-hotkey-trigger.md  TICKET-011-silent-dictation-pipeline.md  TICKET-012-audio-dictation-pipeline.md  TICKET-013-overlay-status-ui.md  TICKET-014-latency-wer-eval-harness.md  TICKET-015-demo-runbook.md  TICKET-016-virtual-mic-install.md  TICKET-017-fused-dictation-pipeline.md  TICKET-017-kokoro-tts-wrapper.md  TICKET-018-virtual-mic-sink.md  TICKET-019-meeting-register-cleanup.md  TICKET-019-virtual-mic-install.md  TICKET-020-foreground-app-detection.md  TICKET-020-kokoro-tts-wrapper.md  TICKET-020-personal-fused-eval-runbook.md  TICKET-021-mode-switcher.md  TICKET-021-virtual-mic-sink.md  TICKET-022-meeting-register-cleanup.md  TICKET-022-silent-meeting-pipeline.md  TICKET-023-foreground-app-detection.md  TICKET-023-meeting-mute-toggle.md  TICKET-023-virtual-mic-sink.md  TICKET-024-meeting-demo-eval.md  TICKET-024-mode-switcher.md  TICKET-025-silent-meeting-pipeline.md  TICKET-026-meeting-mute-toggle.md  TICKET-027-meeting-demo-eval.md  TICKET-029-meeting-demo-eval.md  TICKET-031-eval-driven-fused-tuning-recommendations.md  TICKET-032-fused-confidence-calibration.md  (+5 more)
(+167 files in other folders)
